[metadata]
name = exdpn
version = 0.1.3
description = Tool to mine and evaluate explainable data Petri nets using different classification techniques.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = Process mining, Data Petri net
license = MIT
license_files = LICENSE
platform = any
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent
project_urls = 
    Documentation = https://aarkue.github.io/eXdpn/
    GitHub = https://github.com/aarkue/eXdpn
author = marairis, aarkue, cpitsch, jonathansc

[options]
packages = find:
install_requires =
    pm4py == 2.2.20.1
    scikit-learn == 1.0.2
    shap == 0.40.0
    pandas == 1.3.5
