[metadata]
name = exdpn
version = 1.1.0
description = Tool to mine and evaluate explainable data Petri nets using different classification techniques.
long_description = This package implements a convenient interface to mine and evaluate data Petri nets using different machine learning techniques at each decision point. More information on the package as well as a dockerized graphical user interface can be found on [GitHub](https://github.com/aarkue/eXdpn).
long_description_content_type = text/markdown
keywords = Process mining, Data Petri net
license= GPLv3
platform = any
classifiers = 
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
project_urls = 
    Documentation = https://aarkue.github.io/eXdpn/
    GitHub = https://github.com/aarkue/eXdpn
author = marairis, aarkue, cpitsch, jonathansc

[options]
packages = find:
install_requires =
    pm4py ~= 2.2.20.1
    scikit-learn ~= 1.0.2
    xgboost ~= 1.6.0
    shap ~= 0.41.0
    pandas ~= 1.3.5
    numpy ~= 1.21.6
    matplotlib ~= 3.5.2
